tests/bug_detector_tests/builtinArgumentSize3.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=builtinArgumentSize3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
 \n\
 \n\
 \n\
* Bug Detector * \n\
${BUGDETECTOR_TESTS_DIR}/builtinArgumentSize3.js:11:1~11:16: [Warning] Too many arguments to function 'Math.abs'. \n\
# ReferenceErrors(#) : 0 \n\
# TypeErrors(#)      : 0 \n\
# Warnings(#)        : 1 \n\
 \n\
 \n\
\n
bug-detector_err_equals=
