tests/bug_detector_tests/builtinArgumentSize3.js
/*******************************************************************************
    Copyright (c) 2013, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */

Math.abs(-1);
Math.abs(-2,-3);
